# OmniShield

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  Julia.md  README.md  boot-completed.sh  customize.sh  module.prop  post-fs-data.sh  proxy_manager.sh  sepolicy.rule  service.sh
.github/workflows/: build.yml
docs/: LOCATION_DEBUG.md
jni/: main.cpp  main_minimal.cpp  omni_engine.hpp  omni_profiles.h  vortex_engine.hpp  vortex_profiles.h
jni/include/: dobby.h  zygisk.hpp
jni/include/android/: log.h
jni/include/sys/: system_properties.h
tests/: simulate_proxy.sh
tools/: generate_profiles.py  test_generate_profiles.py  test_profile_leaks.mjs  upgrade_profiles.py
webroot/: index.html
webroot/css/: style.css
webroot/js/: app.js  engine.js  profiles.js
